--- a/mba_consent_form/templates/forms.html
+++ b/mba_consent_form/templates/forms.html
@@ -1,15 +1,15 @@
 <!-- HTML produced by the Flask Forms -->
 
-<form methods="POST">
+<form method="POST">
     {{ form.hidden_tag() }}
     <div class="form-group">
         <fieldset id="email-field">
             {{ form.email.label }}
-            {{ form.email(class = "form-control", placeholder = "Email Here") }}
+            {{ form.email(class = "form-control", placeholder = "Email") }}
         </fieldset>
         <fieldset id="password-field">
             {{ form.password.label }}
-            {{ form.password(class = "form-control", placeholder = "Password Here") }}
+            {{ form.password(class = "form-control", placeholder = "Password") }}
         </fieldset>
 
         {{ form.submit_button(class = 'btn btn-secondary btn-block') }}
