Added full api functionality.

--- a/mba_consent_form/templates/base.html
+++ b/mba_consent_form/templates/base.html
@@ -71,8 +71,12 @@
       <li><a href="{{ url_for('site.home') }}">Customer</a></li>
       <li><a href="{{ url_for('consent.consent') }}">Consent</a></li>
       <li><a href="{{ url_for('searcher.search') }}">Search</a></li>
+      {% if current_user.is_authenticated %}
+      <li><a href="{{ url_for('auth.logout') }}">Log Out</a></li>
+      {% else %}
       <li><a href="{{ url_for('auth.signin') }}">Sign In</a></li>
       <li><a href="{{ url_for('auth.signup') }}">Sign Up</a></li>
+      {% endif %}
     </ul>
   </nav>
   <label for="nav-toggle" class="nav-toggle-label">
