--- a/mba_consent_form/templates/searchform.html
+++ b/mba_consent_form/templates/searchform.html
@@ -1,4 +1,5 @@
-<form method="GET">
+<!-- Changing from GET to POST -->
+<form method="POST">     
     {{ form.hidden_tag() }}
     <div class="form-group">
         <fieldset id="first_name-field">
